layout/style.css
body { font-family: Sans-Serif; }
.header { width: 1000px; }
article { width: 1000px; }
a { text-decoration: none; font-weight: bold; color: #008; }
a:hover { text-decoration: underline; color: #66d; }
li#menu { display: table; border: 1px solid #888; background: #ddd;
  width: 100%; margin: 3px; }
li#menu ul { display: table-cell; padding: 3px 10px; }
li#submenu { display: table; border: 1px solid #888; background: #ddd;
  width: 100%; margin: 3px; }
li#submenu ul { display: table-cell; padding: 3px 10px; }
div#panel { float: right; }
div.minilogin { border: solid 1px #888; background: #eee; min-width: 150px; }
div.minilogin p { padding: 3px 0px; margin: 0px; text-align: center; }
div.minilogin p.user { padding: 3px 7px; margin: 0px; text-align: left; }
div.minilogin a { font-size: 12px; }
div.minilogin input { width: 85%; }
div.minilogin input[type=submit] { border: none 0px #000; background: none;
  text-align: right; font-size: 12px; }
div.login { border: solid 1px #888; background: #eee; }
div.form { border: solid 1px #888; background: #eee; text-align: right;
  min-width: 200px; max-width: 400px; margin: 5px; padding: 0px; }
div.form p { padding: 3px 7px; margin: 0px; text-align: left; }
div.form p:first-child { background: #ddd; border: solid 0px #444;
  border-width: 0px 0px 1px 0px; text-align: left; }
input { border: solid 1px #000; border-width: 0px 0px 1px 0px;
  margin: 1px 7px; margin-right: 0px; }
input[type=text] { width: 50%; }
input[type=password] { width: 50%; }
input[type=submit] { border: solid 1px #888; border-width: 1px;
  color: #000; background: #ddd; font-size: 18px; margin: 3px 7px; }
p.checklist { display: table-row; }
p.checklist input { display: table-cell; margin: 3px 7px; }
table.list td.delete a, a.delete { color: #a00; }
table.list td.delete a:hover, a.delete:hover { background: #f88; }
table.lines { border-collapse: collapse; margin: 3px; margin: 5px; }
table.lines th { border: solid 1px #444; padding: 3px 10px;
  text-align: left; border-width: 0px 0px 1px 0px; }
table.lines tr.space { background: #eee; }
table.lines tr.full { background: #888; }
table.lines tr.overflow { background: #f00; }
table.lines td { border: solid 1px #444; padding: 3px 10px;
  text-align: right; border-width: 0px 0px 1px 0px; }
table.list { border-collapse: collapse; margin: 3px; margin: 5px; }
table.list td { border: solid 1px #444; padding: 3px 10px;
  vertical-align: top; }
table.list td.missing { background: #fdd; }
table.list td.present { background: #dfd; }
table.list td.full { background: #666; }
table.list a { text-decoration: none; font-weight: bold; color: #002; }
table.list a:hover { color: #00a; }
table.list th { border: solid 1px #444; padding: 3px 10px; background: #eee; }
table.list td.free     { background: #6d6; color: #666; }
table.list td.reserved { background: #aaa; color: #666; }
table.list td.active   { background: #d66; color: #222; }
table.userinfo { border-collapse: collapse; margin: 3px; }
table.userinfo td { border: solid 1px #444; padding: 3px 10px; }
table.userinfo th { border: solid 1px #444; padding: 3px 10px; }
table.userinfo td.reserved { background: #aaa; color: #666; }
table.userinfo td.active   { background: #6d6; color: #222; }
/* Style for SVG */
svg.area { width: 200pt; }
circle { fill: none; }
.selected circle { stroke: #a00; stroke-width: 2pt; }
.computer { font-family: Sans-Serif; font-size: 8pt; cursor: move; }
.computer path {
  fill: currentColor; fill-opacity: 1; stroke: none; color: #4d4d4d; }
.computer text { text-anchor: middle; }
rect { fill: #44a; stroke-width: 0; }
.vacant rect { fill: #0a0; stroke-width: 0; }
.partly rect { fill: #f80; stroke-width: 0; }
.reserved rect { fill: #a00; stroke-width: 0; }
.computer g.info { display: none; }
.computer:hover g.info { display: block; }
.computer g.info rect {
  fill: #fff; stroke: #888; stroke-width: 1;
  width: 3cm; height: 2em;
}
.computer g.info text { fill: #000; text-anchor: start; }
.computer g.info text tspan { display: block; clear: both; }

